# ampario-print-agent

./: .gitignore  Cargo.toml  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
src/: api_client.rs  commands.rs  config.rs  lib.rs  main.rs  polling.rs  printer.rs
ui/: app.js  index.html  style.css
